# tool-locker

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_PLAN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py
apps/hardware_daemon/: __init__.py
apps/scanner_daemon/: __init__.py
docs/runbooks/: uat-phase-1.md
prototype/: index.html
tests/: conftest.py  test_smoke.py
